--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry excluding="anybrot/Complex.java" kind="src" path="src"/>
-	<classpathentry kind="lib" path="//hampton.local/stuhome$/15CostenJa/Documents/GitHub/Factals/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="/Repository of Things/Coding/Full Code/Java/Fractals/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
