--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="anybrot/Complex.java" kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/javaxprogrammer/Documents/GitHub/Fractals/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="commons-math3-3.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
